# example_pyproject

./: PackagingUsingPyproject.pptx  README.md  gecko.py
full/: README.rst  gecko.py  license.txt  pyproject.toml
smallest/: gecko.py  pyproject.toml
