[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name="gecko"
version="0.0.1"
description="a different color skin of echo"
readme = "README.rst"
license = {file = "LICENSE.txt"}
authors=[
    {name = "Phebe Polk"},
]
maintainers=[
    {name = "Phebe Polk"},
]
keywords = ["echo"]
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python"
]

[project.scripts]
gecko = "gecko:cli"


